feat: polish config screen — picker, random slots, layout fixes (v0.7.0)
Iterations driven by Gate 2 testing on the Fabric dev client. Bumps
mod_version 0.6.1 → 0.7.0 per the SemVer rule (minor on Gate 3 merge).

Highlights:

  * ItemPicker overlay — two-stage modal opened by clicking a preview
    icon. Stage 1 picks one of 11 item kinds (sword / axe / pickaxe /
    shovel / hoe / bow / helmet / chestplate / leggings / boots /
    shield). Stage 2 picks a material (tool: wood/stone/iron/gold/
    diamond/netherite — armor: leather/chainmail/iron/gold/diamond/
    netherite). Bow + shield are single-material and skip stage 2.
    Cancel + Back buttons + click-outside-panel + Esc all cancel.

  * Random slots — each preview slot can be Specific, RandomItem
    (re-rolls kind + material every name re-roll), or RandomMaterial
    (locks kind, re-rolls material every re-roll). A small "?" badge
    in the icon's bottom-right corner flags randomised slots so they
    are distinguishable at a glance.

  * Column alignment — DatapacksListScreen and PoolListScreen now share
    column right-edge offset constants between headers and row data.
    Headers and row content stay aligned at any GUI scale; pack name
    truncates with an ellipsis when narrower than the available width.

  * Pack-name friendliness — PackGrouping.friendlyPackName maps Fabric
    dev's generated_<hash> pack id and mod/adventureitemnames variants
    to "Adventure Item Names" / "ATLA Pack" labels.

  * 2-line names — long rolled names wrap to a second 9-px line in the
    preview instead of truncating at the column edge. Panel grows from
    72 px to 86 px.

  * Slot count 10 → 6 — preview takes less screen space while still
    covering one weapon, two tools, and three armor slots by default.

  * Click-from-command defer — ClientInit.openConfigScreen() now
    defers via Minecraft.tell() so chat-close doesn't stomp the new
    screen on the same tick.

  * Preview retry — when a slot's sample doesn'